init default logger setting use json file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,9 @@ set(CMAKE_C_STANDARD_REQUIRED 11)
 
 set(SRC_ROOT_DIR src)
 
-set(SOURCE ${SRC_ROOT_DIR}/main.cpp ${SRC_ROOT_DIR}/auxiliary/ReadSetting.cpp)
+set(SOURCE ${SRC_ROOT_DIR}/main.cpp 
+            ${SRC_ROOT_DIR}/auxiliary/ReadSetting.cpp
+            ${SRC_ROOT_DIR}/auxiliary/InitLogger.cpp)
 
 add_executable(Chaining  ${SOURCE})
 
